# gradescope-api

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/pyscope/: __init__.py  account.py  assignment.py  connection.py  course.py  exceptions.py  extension.py  hello.py  person.py  pyscope_types.py  question.py  roster.py  session.py  utils.py
test/: run_tests.py
