[project]
name = "pyscope"
version = "0.1.0"
description = "A python-based API for gradescope"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4",
    "requests",
    "click",
    "tqdm",
    "pre-commit",
    "ruff"
]

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "D100",
    "C901",
    "FBT001",
    "FBT002",
    "PLR0913",
    "PLR0911",
    "D105",
    "D107",
    "DTZ005",
]

exclude = [
    "**/.*",
    "**/__pycache__",
    "sensitive",
]
target-version = "py311"
line-length = 120

[tool.ruff.per-file-ignores]
"test/*.py" = ["S101", "D", "PLR2004"]

[tool.ruff-format]
quote-style = "double"
line-ending = "lf"
indent-style = "space"
